<resources>
    <string name="app_name">AvailableDishes</string>
    <string name="exit_alert">Нажмите еще раз для выхода</string>
    <string name="products_bottom_nav">Продукты</string>
    <string name="dishes_bottom_nav">Рецепты</string>
    <string name="notes_bottom_nav">Заметки</string>
    <string name="assistant_bottom_nav">Ассистент </string>
    <string name="profile_bottom_nav">Профиль</string>
    <!--    products_bottom_nav-->
    <string name="add_products_list">Добавить список продуктов</string>
    <string name="delete_product_list">Удалить список продуктов</string>
    <string name="add_new_person_in_product_list_bottom_sheet_tv">Вы можете добавлять других пользователей к этому списку продуктов.
        Для этого введите электронную почту Google аккаунта пользователя и нажмите кнопку Добавить.</string>
    <string name="my_products">Мои продукты</string>
    <string name="buy_products">Купить</string>
    <string name="add_products">Добавить продукты</string>
    <string name="create_product">Создать новый продукт</string>
    <string name="edit_product_heading">Редактирование продукта</string>
    <string name="create_new_product_heading">Создание продукта</string>
    <string name="save_product_btn">Сохранить</string>
    <string name="create_product_btn">Создать</string>
    <string name="name_product">Название</string>
    <string name="description_product">Описание</string>
    <string name="tags_edit_create_product">Добавить тег</string>
    <string name="favorite_product">Добавить в мои продукты</string>
    <string name="need_to_buy_product">Добавить в список покупок</string>
    <string name="delete_product">Удалить продукт</string>
    <string name="available_dishes_detail_product">Рецепты с этим продуктом</string>
    <string name="create_dish_with_product">Создать рецепт с этиим продуктом</string>
    <string name="add_tag_screen_product_header">Добавить тег</string>
    <!--    toast_message-->
    <string name="empty_product_name">Введите название продукта</string>
    <string name="already_exists">Такой продукт уже существует. \nВведите другое название.</string>
    <string name="double_back">Нажмите еще раз чтобы выйти</string>
    <!--    alert_dialog_message-->
    <string name="title_save">Сохранение</string>
    <string name="title_back">Выход</string>
    <string name="title_delete">Удаление</string>
    <string name="message_save">Сохранить изменения и выдти?</string>
    <string name="message_back">Выдти без сохранения?</string>
    <string name="message_delete_product">Удалить продукт из приложения и рецептов?</string>
    <string name="message_delete_img">Удалить картинку продукта?</string>
    <string name="answer_positive">Да</string>
    <string name="answer_negative">Нет</string>
    <string name="take_picture_alert_dialog">Сделать фото</string>
    <string name="pick_image_from_gallery_alert_dialog">Выбрать из галереи</string>
    <!--    dishes_bottom_nav-->
    <string name="all_dishes">Рецепты</string>
    <string name="available_dishes">Можно приготовить</string>
    <string name="add_new_dish">Добавить новый рецепт</string>
    <string name="show_ingredients_btn_detail_dish">Ингридиенты</string>
    <string name="add_ingredients_in_buy_list_detail_dish">Добавить недостающие ингридиенты в список покупок</string>
    <string name="delete_dish">Удалить рецепт</string>
    <string name="favorite_dish">Добавить рецепт в избранное</string>
    <string name="recipe_product">Рецепт</string>
    <string name="add_products_in_recipe">Добавить продукты в рецепт</string>
    <string name="create_new_dish_heading">Создание рецепта</string>
    <string name="edit_dish_heading">Редактирование рецепта</string>
    <string name="empty_dish_name">Введите название блюда</string>
    <string name="already_exists_dish">Такое блюдо уже существует. \nВведите другое название.</string>
    <string name="message_delete_dish">Удалить рецепт из приложения?</string>
    <string name="message_delete_img_dish">Удалить картинку блюда?</string>
    <!--    notes_bottom_nav-->
    <string name="all_refrigerators">Холодильники для заметок</string>
    <string name="add_refrigerator">Добавить холодильник</string>
    <string name="delete_refrigerator">Удалить холодильник</string>
    <string name="add_new_person_bottom_sheet_tv">Вы можете добавлять других пользователей к этому списку заметок.
        Для этого введите электронную почту Google аккаунта пользователя и нажмите кнопку Добавить.</string>
    <string name="add_new_person_bottom_sheet_et">Email</string>
    <string name="add_new_person_btn">Добавить</string>
    <string name="note_et">Напишите вашу заметку...</string>
    <string name="delete_note">Удалить заметку</string>

</resources>