<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/productsFragment"
        android:icon="@drawable/ic_products_bottom_nav"
        android:title="@string/products_bottom_nav" />

    <item
        android:id="@+id/dishesFragment"
        android:icon="@drawable/ic_dishes_bottom_nav"
        android:title="@string/dishes_bottom_nav" />

    <item
        android:id="@+id/myRefrigeratorsFragment"
        android:icon="@drawable/ic_notes_bottom_nav"
        android:title="@string/notes_bottom_nav" />

    <item
        android:id="@+id/assistantFragment"
        android:icon="@drawable/ic_assistant_bottom_nav"
        android:title="@string/assistant_bottom_nav" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_bottom_nav"
        android:title="@string/profile_bottom_nav" />
</menu>