<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".products_bottom_nav.ui.create_product.fragment.CreateProductFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_product"
        android:textSize="16sp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/descriptionProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_product"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionProductEt"
        app:layout_constraintStart_toStartOf="@+id/nameProductTv"
        app:layout_constraintTop_toTopOf="@+id/descriptionProductEt" />

    <TextView
        android:id="@+id/favoriteProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/favorite_product"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProductEt" />

    <EditText
        android:id="@+id/nameProductEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nameProductTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameProductTv"
        app:layout_constraintTop_toTopOf="@+id/nameProductTv" />

    <EditText
        android:id="@+id/descriptionProductEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/nameProductEt"
        app:layout_constraintStart_toStartOf="@+id/nameProductEt"
        app:layout_constraintTop_toBottomOf="@+id/nameProductEt" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_inactive_favorite"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteProductTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favoriteProductTv"
        app:layout_constraintTop_toTopOf="@+id/favoriteProductTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>