<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".products_bottom_nav.ui.edit_create_product.fragment.EditCreateProductFragment">

    <LinearLayout
        android:id="@+id/headerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/headingProductTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            tools:text="Редактировать продукт" />

        <ImageView
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@drawable/ic_delete"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/productEditCreateGroupNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerGroup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productEditCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/name_product"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productEditCreateGroup" />

    <TextView
        android:id="@+id/descriptionProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_product"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionProductEt"
        app:layout_constraintStart_toStartOf="@+id/nameProductTv"
        app:layout_constraintTop_toTopOf="@+id/descriptionProductEt" />

    <EditText
        android:id="@+id/nameProductEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nameProductTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameProductTv"
        app:layout_constraintTop_toTopOf="@+id/nameProductTv" />

    <EditText
        android:id="@+id/descriptionProductEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/nameProductEt"
        app:layout_constraintStart_toStartOf="@+id/nameProductEt"
        app:layout_constraintTop_toBottomOf="@+id/nameProductEt" />

    <TextView
        android:id="@+id/favoriteProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/favorite_product"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProductEt" />

    <ImageView
        android:id="@+id/favoriteIc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_inactive_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteProductTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favoriteProductTv"
        app:layout_constraintTop_toTopOf="@+id/favoriteProductTv" />

    <TextView
        android:id="@+id/needToBuyProductTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/need_to_buy_product"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteProductTv" />

    <ImageView
        android:id="@+id/needToBuyIc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_inactive_need_to_buy"
        app:layout_constraintBottom_toBottomOf="@+id/needToBuyProductTv"
        app:layout_constraintEnd_toEndOf="@+id/favoriteIc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/favoriteIc"
        app:layout_constraintTop_toTopOf="@+id/needToBuyProductTv"
        app:layout_constraintVertical_bias="0.454" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editCreateProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/edit_create_btn"
        tools:text="@string/create_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteIc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>