<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".products_bottom_nav.ui.my_products.fragment.ProductsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/headerGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_header_product_detail"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:padding="18dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/headingProductList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="30sp"
                tools:text="Название списка" />

            <ImageView
                android:id="@+id/addPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:padding="14dp"
                android:src="@drawable/ic_add_person" />

            <ImageView
                android:id="@+id/editProductList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:padding="14dp"
                android:src="@drawable/ic_edit_new" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerGroup"
            app:tabIndicatorColor="?attr/colorOnPrimary"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/FragmentTabLayout"
            app:tabTextColor="?attr/colorOnPrimary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayoutProducts" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menuBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription=""
            android:src="@drawable/bg_bottom_sheet_swiper" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:paddingVertical="16dp"
            android:text="@string/add_new_person_in_product_list_bottom_sheet_tv"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailIl"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/add_new_person_bottom_sheet_et"
            android:theme="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addNewPersonEmailEt"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addNewPersonBtn"
            style="@style/AddButtonBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:text="@string/add_new_person_btn" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>